# twitter-sentiment-analysis

./: .travis.yml  CMakeLists.txt  ConnectionHandler.hpp  Oauth.hpp  README.md  RingBuffer.hpp  TwitterHandler.hpp  access_token_secret.txt  consumer_key_secret.txt  main.cpp
include/: AnalysisHandler.hpp  ConnectionHandler.hpp  ExceptionHandler.hpp  Oauth.hpp  RingBuffer.hpp  TwitterHandler.hpp  utility.hpp
